# MODELO-IA

./: main.py  pyproject.toml
