[project]
name = "nueva-carpeta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.21.1",
    "langchain>=0.2.0",
    "langgraph>=0.0.48",
    "langsmith>=0.1.52",
    "langchain-openai>=0.1.1",
    "reportlab>=4.1.0",
]
